(include_subdirs unqualified)

(library
 (name Bot_components)
 (public_name bot-components)
 (wrapped false)
 (modules_without_implementation GitHub_types GitLab_types)
 (libraries base camlzip cohttp-lwt-unix eqaf ohex mirage-crypto stdio str
   x509 yojson ISO8601 digestif toml)
 (inline_tests)
 (preprocess
  (per_module
   ((pps graphql_ppx -- -native -schema
      bot-components/github/github-schema.json)
    GitHub_GraphQL)
   ((pps graphql_ppx -- -native -schema
      bot-components/gitlab/gitlab-schema.json)
    GitLab_GraphQL)
   ((pps ppx_expect)
    String_utils
    Git_utils)))
 (preprocessor_deps
  (file github/github-schema.json)
  (file gitlab/gitlab-schema.json)))

; Schema generation rules are now in github/dune and gitlab/dune

(env
 (dev
  (flags :standard -w -9)))
