(executable
 (name bot)
 (public_name bot)
 (package coq-bot)
 (modules bot)
 (promote (until-clean))
 (libraries base bot-components cohttp-lwt-unix mirage-crypto
   mirage-crypto-rng.unix stdio toml yojson coq-bot.config coq-bot.webhooks
   coq-bot.actions coq-bot.ci coq-bot.utils))

(env
 (dev
  (flags :standard -w -9)))
